[package]
name = "pxar"
version = "0.1.8"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2018"
license = "AGPL-3"
description = "Proxmox Archive format support library"
exclude = [
    "build",
    "debian",
    "testdir",
]

[[example]]
name = "apxar"
path = "examples/apxar.rs"
required-features = [ "async-example" ]

[dependencies]
bitflags = "1.2.1"
endian_trait = { version = "0.6", features = ["arrays"] }
siphasher = "0.3"

anyhow = { version = "1.0", optional = true }
futures = { version = "0.3.1", optional = true }
tokio = { version = "0.2.10", optional = true, default-features = false }

[features]
default = [ "futures-io", "tokio-io" ]
futures-io = [ "futures" ]
tokio-io = [ "tokio" ]
tokio-fs = [ "tokio-io", "tokio/fs" ]

full = [ "tokio-fs", "futures-io" ]

async-example = [
    "anyhow",
    "futures-io",
    "tokio-io",
    "tokio-fs",
    "tokio/rt-threaded",
    "tokio/io-driver",
    "tokio/macros",
]

[dev-dependencies]
libc = "0.2"
anyhow = "1.0"
