[package]
name = "pxar"
version = "0.12.1"
authors = ["Wolfgang Bumiller <w.bumiller@proxmox.com>"]
edition = "2024"
license = "AGPL-3"
description = "Proxmox Archive format support library"
exclude = [
    "build",
    "debian",
    "testdir",
]

[[example]]
name = "apxar"
path = "examples/apxar.rs"
required-features = [ "async-example" ]

[[example]]
name = "pxarcmd"
path = "examples/pxarcmd.rs"

[[example]]
name = "mk-format-hashes"
path = "examples/mk-format-hashes.rs"
test = false
bench = false
doc = false

[[test]]
name = "simple"
path = "tests/simple/main.rs"
test = true
required-features = [ "test-harness" ]

[[test]]
name = "compat"
path = "tests/compat.rs"
test = true
required-features = [ "test-harness" ]

[dependencies]
endian_trait = { version = "0.6", features = ["arrays"] }
siphasher = "1"

tokio = { version = "1.0", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = [ "tokio-io" ]
tokio-io = [ "tokio" ]
tokio-fs = [ "tokio-io", "tokio/fs" ]

full = [ "tokio-fs"]

async-example = [
    "tokio-io",
    "tokio-fs",
    "tokio/rt-multi-thread",
    "tokio/macros",
]

test-harness = []
